--- a/css/style.css
+++ b/css/style.css
@@ -4,33 +4,10 @@
     
 }
 
-.nav1{
-    background-color: rgb(58, 77, 67);
-    top: 0%;
-    width: 100%;
-    height: 50px;
-    position: sticky;
+
+.nav{
+    background-color: rgb(72, 97, 85);
     border-bottom: 2px solid rgba(0, 0, 0, 0.479);
-    z-index: 3;
-}
-
-li{
-    padding-top: 10px;
-    padding-left: 3%;
-    text-align: center;
-    color: wheat;
-    list-style-type: none;
-    display: inline-block;
-    width: 16%;
-    font-style: normal;
-    font-size: 117%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    
-}
-
-a{
-    color: rgb(223, 223, 223);
-    text-decoration: none;
 }
 
 .main{
@@ -41,7 +18,7 @@ a{
 .header{
     border-bottom: 5px solid rgba(10, 31, 15, 0.768);
     width: 100%;
-    height: 1000px;
+    height: 940px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -55,25 +32,24 @@ a{
     
     
     width: 100%;
-    height: 1000px;
+    height: 940px;
     position: absolute;
     z-index: 1;
     
 }
 
-.animate__animated{
-    z-index: 2;
-}
 
 .h1banner{
     z-index: 2;
-    margin-bottom: 3%;
+    margin-bottom: 1%;
+    margin-left: 1%;
     position: relative;
-    color: rgb(77, 109, 83);
+    color: rgb(149, 181, 155);
     font-family:'Roboto', sans-serif;
     font-size: 300%;
     border-bottom: 2px solid rgba(255, 255, 255, 0.878);
     letter-spacing: 2px;
+    width: 370px;
     
     
     
@@ -81,7 +57,8 @@ a{
 
 .h2banner{
     z-index: 2;
-    margin-bottom: 3%;
+    padding-bottom: 1%;
+    margin-left: 1%;
     position: relative;
     color: rgb(255, 255, 255);
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -96,7 +73,9 @@ a{
 
 .buttonbanner{
     z-index: 2;
-    margin-bottom: 60%;
+    width: 150px;
+    margin-bottom: 3%;
+    margin-left: 1%;
     position: relative;
     font-size: 130%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -114,18 +93,17 @@ a{
     
 }
 
-.section1{
-    display: grid;
-    grid-template-columns: 40% 40%;
-    grid-template-rows: 40% 40%;
-    grid-template-areas: "img text1" 
-                         "img text2";
-    justify-content: space-between;
+.slide{
+    padding-top: 10px;
+    margin-bottom: 100px;
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.542);
+    
+}
 
-    height: 1500px;
-
-background-color: rgba(194, 233, 194, 0.404);
-
+.slide img{
+    height: 900px;
+    
+    
 }
 
 
@@ -180,14 +158,14 @@ background-color: rgba(194, 233, 194, 0.404);
 
     height: 1500px;
 
-background-color: rgba(194, 233, 194, 0.404);
+
 
 }
 
 
 
 .img2{
-    
+    margin-right: 5%;
     width: 100%;
     height: 100%;
     box-shadow: -10px 5px 5px rgba(0, 0, 0, 0.515);
@@ -226,11 +204,12 @@ background-color: rgba(194, 233, 194, 0.404);
         font-size: 80px;
         font-weight: 400;
         background-color: rgb(125, 148, 123);
+        margin-bottom: 0%;
 
     }
 
     .MainTienda{
-        height: 3600px;
+        height: 2000px;
         background-image: linear-gradient(360deg, rgb(228, 255, 222),rgb(125, 148, 123));
     }
 
@@ -244,7 +223,7 @@ background-color: rgba(194, 233, 194, 0.404);
         display: inline-block;
         margin-left: 10px;
         font-family: 'Roboto', sans-serif;
-        padding-top: 10px;
+        padding-top: 1px;
         padding-bottom: 10px;
         border-bottom: 1px solid rgba(4, 4, 4, 0.398);
 
@@ -253,34 +232,30 @@ background-color: rgba(194, 233, 194, 0.404);
 
 
 
+
+
     .SectionTienda{
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
-        margin: 2% 5% 5% 5%;
-        justify-content: space-between;
+        margin-left: 0%;
+        margin-right: 0%;
+        margin-top: 0%;
+        margin-bottom: 0%;
+        justify-content: space-evenly;
         
 
     }
     .divTienda{
-        width: 30%;
-        height: 560px;
-        padding: 1% 1% 3% 1%;
+        margin-left: 0%;
+        margin-right: 0%;
+        margin-top: 5%;
+        margin-bottom: 0%;
+        
         
 
     }
-    .TiendaImg{
-        width: 100%;
-        height: 100%;
 
-    }
-    .textDiv{
-        display: flex;
-        justify-content: center;
-        font-family: 'Roboto', sans-serif;
-        font-size: 90%;
-        
-    }
 
 
         /* CSS GALERÍA */
@@ -315,7 +290,7 @@ background-color: rgba(194, 233, 194, 0.404);
 
                     /* CSS Nosotros */
                     .mainNosotros{
-                        height: 800px;
+                        height: 840px;
                         background-color: rgb(98, 128, 98);
                     }
 
@@ -415,15 +390,14 @@ background-color: rgba(194, 233, 194, 0.404);
                                           
                                         }
 
-
-
+/*
 @media screen and (max-width:600px) {
 
 /* Index max600*/
 
 
 
-
+/*
 
     li{
         padding-top: 5px;
@@ -570,7 +544,7 @@ background-color: rgba(194, 233, 194, 0.404);
         }
     
         /* Tienda max600 */
-
+/*
         .MainTienda{
             height: 10000px;
             background-image: linear-gradient(360deg, rgb(228, 255, 222),rgb(125, 148, 123));
@@ -611,7 +585,7 @@ background-color: rgba(194, 233, 194, 0.404);
     
       
         /* Galeria max600 */
-
+/*
         .mainGaleria{
             height: 5500px;
             
@@ -650,7 +624,7 @@ background-color: rgba(194, 233, 194, 0.404);
         
 
     /*NosotrosMax600*/
-
+/*
     .mainNosotros{
         height: 800px;
         
@@ -680,7 +654,7 @@ background-color: rgba(194, 233, 194, 0.404);
 
 
     /*ContactoMax600*/
-
+/*
     .mainContacto{
         height: 850px;
         }
@@ -724,7 +698,7 @@ background-color: rgba(194, 233, 194, 0.404);
 @media screen and (min-width:600px){
 
     /* Index min600*/
-
+/*
     .section1{
         grid-template-columns: 100%;
         grid-template-rows:  50% 25% 25%; 
@@ -813,7 +787,7 @@ background-color: rgba(194, 233, 194, 0.404);
 
 
 
-
+/*
         .MainTienda{
             height: 5800px;
             background-image: linear-gradient(360deg, rgb(228, 255, 222),rgb(125, 148, 123));
@@ -853,7 +827,7 @@ background-color: rgba(194, 233, 194, 0.404);
         }
     
     /*Galeria min600*/
-
+/*
     .mainGaleria{
         height: 3200px;
         
@@ -902,7 +876,7 @@ background-color: rgba(194, 233, 194, 0.404);
 @media screen and (min-width:900px){
 
     /* Index min900*/
-
+/*
     .section1{
         grid-template-columns: 100%;
         grid-template-rows:  70% 15% 15%; 
@@ -990,7 +964,7 @@ background-color: rgba(194, 233, 194, 0.404);
 }
 
 /*TiendaMin900*/
-
+/*
 .MainTienda{
     height: 5800px;
 }
@@ -1029,7 +1003,7 @@ background-color: rgba(194, 233, 194, 0.404);
 }
 
 /*GaleriaMin900*/
-
+/*
 .mainGaleria{
     height: 3200px;
     
@@ -1069,7 +1043,7 @@ background-color: rgba(194, 233, 194, 0.404);
 @media screen and (min-width:1200px){
 
     /* Index min1200*/
-
+/*
     .section1{
        
         grid-template-columns: 40% 40%;
@@ -1174,7 +1148,7 @@ background-color: rgba(194, 233, 194, 0.404);
 
 /*TiendaMin1200*/
 
-
+/*
 .MainTienda{
     height: 3600px;
 }
@@ -1203,7 +1177,7 @@ background-color: rgba(194, 233, 194, 0.404);
 }
 
 /*GaleriaMin1200*/
-
+/*
 .mainGaleria{
     height: 2000px;
     
@@ -1234,6 +1208,7 @@ background-color: rgba(194, 233, 194, 0.404);
 
 
 /*NosotrosMin1200*/
+/*
 .mainNosotros{
     height: 800px;
 }
@@ -1259,6 +1234,7 @@ background-color: rgba(194, 233, 194, 0.404);
 }
 
 /*ContactoMin1200*/
+/*
 .mainContacto{
     height: 850px;
     background-color: rgb(98, 128, 98);
