--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@
         text-align: center;
         font-family: 'Quicksand', sans-serif;
         padding-top: 10px;
-        font-size: 80px;
+        font-size: 120px;
         font-weight: 400;
         background-color: rgb(125, 148, 123);
         margin-bottom: 0%;
@@ -234,48 +234,60 @@
 
 
 
-    .SectionTienda{
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
+    .DivContainer{
         margin-left: 0%;
         margin-right: 0%;
-        margin-top: 0%;
+        margin-top: 3%;
         margin-bottom: 0%;
-        justify-content: space-evenly;
+        justify-content: center;
+
+        
         
 
     }
     .divTienda{
+        
         margin-left: 0%;
         margin-right: 0%;
-        margin-top: 5%;
-        margin-bottom: 0%;
-        
+        margin-top: 0%;
+        margin-bottom: 10%;
+        padding: 1% 1% 1% 1%;
+        box-shadow: 8px 3px 3px rgba(0, 0, 0, 0.227);
+        width: 100%;
+        height: 100%;
         
 
+    }
+
+    .divTienda:hover{
+
+        box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.227);
+        transition: all 1s;
+        transform: scale(120%);
+ 
     }
 
 
 
         /* CSS GALERÍA */
         .mainGaleria{
-            height: 2000px;
-            background-color: rgb(98, 128, 98);
+            height: 100%;
+            background-color: rgb(67, 84, 72);
             
         }
 
         .sectionGaleria{
             display: grid;
-            grid-template-columns: 30% 33% 33%;
-            grid-template-rows: 40% 40% 40%;
+            grid-template-columns: 25% 25% 25%;
+            grid-template-rows: 25% 25% 25%;
             grid-template-areas: "foto1 foto2 foto3"
                                  "foto4 foto5 foto6"
                                  "foto7 foto8 foto9";
             column-gap: 10px;
             row-gap: 10px;
-            justify-content: center;
-            height: 1500px;
+            justify-content: space-evenly;
+            align-content: space-evenly;
+            
             padding-top: 20px;
             
             
@@ -285,65 +297,93 @@
         .imgGaleria{
             width: 100%;
             height: 100%;
-            box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.542);
+            box-shadow: 8px 3px 3px rgba(0, 0, 0, 0.227);
+            border: 1px solid beige;
+        }
+
+        .imgGaleria:hover{
+            box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.227);
+            transition: all 1s;
+            transform: scale(120%);
+
         }
 
                     /* CSS Nosotros */
                     .mainNosotros{
-                        height: 1400px;
-                        background-color: rgb(98, 128, 98);
+                        height: 100%;
+                        background-color: rgb(67, 84, 72);
+                    }
+
+                    .headerNosotros{
+                        width: 100%; 
+                        height: 630px;
+                    }
+
+                    .BannerNosotros{
+                        width: 100%;
+                        height: 100%;
+                        border-bottom: 3px solid rgba(61, 59, 59, 0.59);
                     }
 
                     .sectionNosotros{
-                        display: flex;
+                        
+                        padding-bottom: 200px;
 
                     }
 
                     .h1Nosotros{
                         text-align: center;
-                        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-                        font-weight: 500;
-                        font-size: 400%;
+                        font-family: 'Quicksand', sans-serif;
+                        font-weight: 100;
+                        font-size: 450%;
                         padding-top: 2%;
+                        letter-spacing: 4px;
+                        color: rgb(255, 255, 255);
                     }
                     .Pnosotros{
                         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-                        font-weight: 400;
+                        font-weight: 100;
                         font-size: 200%;
                         text-align: left;
                         margin-left: 2%;
                         padding-top: 2%;
+                        color: white;
                        
                     }
                                         /* CSS Contacto */
 
                                         .mainContacto{
                                         height: 1400px;
-                                        background-color: rgb(98, 128, 98);
+                                        background-color: rgb(67, 84, 72);
                                         }
                                         .h1Contacto{
                                             padding-top: 50px;
                                             padding-bottom: 100px;
                                             text-align: center;
-                                            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-                                            font-weight: 500;
+                                            font-family: 'Quicksand', sans-serif;
+                                            font-weight: 100;
                                             font-size: 400%;
+                                            color: white;
+
                                         }
                                         .formContacto{
                                             text-align: center;
                                             padding-left: 30%;
                                             width: 40%;
                                             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+                                            
                                         }
 
                                         .formNombre{
                                             padding-top: 2%;
                                             padding-bottom: 2%;
+                                            
                                         }
 
                                         .formEmail{
                                             font-size: 100%;
                                             padding-bottom: 2%;
+                                           
                                             
                                         }
                                         
