--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 
 .main{
     background-image: linear-gradient(180deg, rgb(60,78,54),rgb(149,173,130),rgb(43,56,39));
+ 
     
 }
 
@@ -93,9 +94,13 @@
     
 }
 
+.SectionHome{
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
 .slide{
-    padding-top: 10px;
-    margin-bottom: 100px;
+    
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.542);
     
 }
@@ -148,48 +153,6 @@
 
     
 
-.section2{
-    display: grid;
-    grid-template-columns: 40% 40%;
-    grid-template-rows: 30% 50%;
-    grid-template-areas: "text img" 
-                         "text img";
-    justify-content: space-between;
-
-    height: 1500px;
-
-
-
-}
-
-
-
-.img2{
-    margin-right: 5%;
-    width: 100%;
-    height: 100%;
-    box-shadow: -10px 5px 5px rgba(0, 0, 0, 0.515);
-    grid-area: img;
-    
-    
-    
-    
-    
-}
-
-.texto3{
-    align-self: center;
-    grid-area: text;
-    margin-left: 0%;
-    margin-top: 0%;
-    margin-bottom: 0%;  
-    height: 10%;
-    width: 100%;
-    font-family:'Quicksand', sans-serif;
-    font-size: 300%;
-    font-weight:540;
-
-}
 
 
 
@@ -271,7 +234,8 @@
 
         /* CSS GALERÍA */
         .mainGaleria{
-            height: 100%;
+            height: 100rem;
+            width: 100%;
             background-color: rgb(67, 84, 72);
             
         }
@@ -287,7 +251,9 @@
             row-gap: 10px;
             justify-content: space-evenly;
             align-content: space-evenly;
-            
+
+            width: 100%;
+            height: 100%;
             padding-top: 20px;
             
             
@@ -310,7 +276,7 @@
 
                     /* CSS Nosotros */
                     .mainNosotros{
-                        height: 100%;
+                        height: 50rem;
                         background-color: rgb(67, 84, 72);
                     }
 
