Se agrego un archivo scss para separar las variables del archivo scss principal

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,9 +4,7 @@
     
 }
 
-$colorFondo :rgb(67, 84, 72);
-$fuenteTexto : 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-$fuenteTitulo : 'Quicksand', sans-serif;
+@import 'variables.scss'; 
 
 
 
