--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@
     height: 940px;
     position: absolute;
     z-index: 1; }
-  .header .h1banner {
+  .header .h1banner, .header .h2banner {
     z-index: 2;
     margin-bottom: 1%;
     margin-left: 1%;
@@ -31,21 +31,19 @@
     font-size: 300%;
     border-bottom: 2px solid rgba(255, 255, 255, 0.878);
     letter-spacing: 2px;
-    width: 370px; }
+    width: 16%; }
   .header .h2banner {
-    z-index: 2;
-    padding-bottom: 1%;
-    margin-left: 1%;
-    position: relative;
     color: white;
     font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
     font-size: 140%;
     font-weight: lighter;
+    border-bottom: 0ch;
+    letter-spacing: 0ch;
     width: 80%; }
   .header .buttonbanner {
     z-index: 2;
     width: 150px;
-    margin-bottom: 3%;
+    margin-bottom: 23%;
     margin-left: 1%;
     position: relative;
     font-size: 130%;
@@ -73,8 +71,8 @@
 .h1Tienda {
   text-align: center;
   font-family: "Quicksand", sans-serif;
-  padding-top: 10px;
-  font-size: 100px;
+  padding-top: 2%;
+  font-size: 600%;
   font-weight: 300;
   letter-spacing: 10px;
   background-color: #7d947b;
@@ -160,7 +158,7 @@
       text-align: center;
       font-family: "Quicksand", sans-serif;
       font-weight: 100;
-      font-size: 450%;
+      font-size: 400%;
       padding-top: 2%;
       letter-spacing: 4px;
       color: white; }
@@ -178,12 +176,12 @@
   height: 1400px;
   background-color: #435448; }
   .mainContacto .h1Contacto {
-    padding-top: 50px;
-    padding-bottom: 100px;
     text-align: center;
     font-family: "Quicksand", sans-serif;
     font-weight: 100;
     font-size: 400%;
+    padding-top: 2%;
+    letter-spacing: 4px;
     color: white; }
 
 /*FOOTER*/
@@ -196,9 +194,6 @@
   justify-content: space-evenly;
   width: 100%;
   height: 110px; }
-  .footer .redes {
-    width: 40px;
-    height: 40px; }
-  .footer .redeslink {
+  .footer .redes, .footer .redeslink {
     width: 40px;
     height: 40px; }
