--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,3 +2,5 @@
 $colorFondo :rgb(67, 84, 72);
 $fuenteTexto : 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 $fuenteTitulo : 'Quicksand', sans-serif;
+$TamTitulo :  400%;
+$TamParrafo : 200%;
