--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,7 +4,10 @@
     
 }
 
-@import 'variables.scss'; 
+@import 'variables.scss';
+
+@import 'mixins.scss';
+
 
 
 
@@ -44,23 +47,26 @@
         font-size: 300%;
         border-bottom: 2px solid rgba(255, 255, 255, 0.878);
         letter-spacing: 2px;
-        width: 370px;
+        width: 16%;
         
         
         
     }
 
     .h2banner{
-        z-index: 2;
-        padding-bottom: 1%;
-        margin-left: 1%;
-        position: relative;
+
+        @extend .h1banner ;
+
         color: rgb(255, 255, 255);
         font-family: $fuenteTexto;
         font-size: 140%;
         font-weight: lighter;
+        border-bottom: 0ch;
+        letter-spacing: 0ch;
         width: 80%;
         
+        
+    
         
     
     }
@@ -68,7 +74,7 @@
     .buttonbanner{
         z-index: 2;
         width: 150px;
-        margin-bottom: 3%;
+        margin-bottom: 23%;
         margin-left: 1%;
         position: relative;
         font-size: 130%;
@@ -114,8 +120,8 @@
 .h1Tienda{
     text-align: center;
     font-family: $fuenteTitulo;
-    padding-top: 10px;
-    font-size: 100px;
+    padding-top: 2%;
+    font-size: 600%;
     font-weight: 300;
     letter-spacing: 10px;
     background-color: rgb(125, 148, 123);
@@ -243,14 +249,9 @@
         padding-bottom: 200px;
 
         .h1Nosotros{
-            text-align: center;
-            font-family: $fuenteTitulo;
-            font-weight: 100;
-            font-size: 450%;
-            padding-top: 2%;
-            letter-spacing: 4px;
-            color: rgb(255, 255, 255);
+       @include Titulos($fuenteTitulo , $TamTitulo)
         }
+
         .Pnosotros{
             font-family: $fuenteTexto;
             font-weight: 100;
@@ -272,14 +273,7 @@
     background-color: $colorFondo;
 
     .h1Contacto{
-        padding-top: 50px;
-        padding-bottom: 100px;
-        text-align: center;
-        font-family: $fuenteTitulo;
-        font-weight: 100;
-        font-size: 400%;
-        color: white;
-
+       @include Titulos($fuenteTitulo , $TamTitulo)
     }
 
 
@@ -306,9 +300,8 @@
     }
     
     .redeslink{
-        width: 40px;
-        height: 40px;
+
+        @extend .redes;
        
-      
     }
 }
