--- a/scss/style.scss
+++ b/scss/style.scss
@@ -95,7 +95,7 @@
 }
 
 .main{
-    background-image: linear-gradient(180deg, rgb(60,78,54),rgb(149,173,130),rgb(43,56,39));
+    background-image: linear-gradient(180deg, rgb(72, 97, 85), rgb(43,56,39));
  
     .SectionHome{
         padding-top: 100px;
@@ -141,11 +141,15 @@
 
     .FormTienda{
         display: inline-block;
-        margin-left: 10px;
+        margin-left: 15px;
         font-family: 'Roboto', sans-serif;
         padding-top: 1px;
         padding-bottom: 10px;
         border-bottom: 1px solid rgba(4, 4, 4, 0.398);
+        
+        .btnAceptar{
+            margin-left: 10px;
+        }
 
 
     }
@@ -269,12 +273,13 @@
  /* CSS Contacto */
 
  .mainContacto{
-    height: 1400px;
+    height: 83vh;
     background-color: $colorFondo;
 
     .h1Contacto{
        @include Titulos($fuenteTitulo , $TamTitulo)
     }
+
 
 
 }
@@ -805,7 +810,7 @@
     }
 
     .main{
-        background-image: linear-gradient(180deg, rgb(60,78,54),rgb(149,173,130),rgb(43,56,39));
+        background-image: linear-gradient(180deg, rgb(72, 97, 85), rgb(43,56,39));
      
         .SectionHome{
             padding-top: 100px;
@@ -908,7 +913,7 @@
         /*CONTACTO MIN1400*/
 
         .mainContacto{
-            height: 1400px;
+            height: 83vh;
             background-color: $colorFondo;
         
             .h1Contacto{
